src/parser/test/parser-tests-gen/data/good/good-8.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed2|object
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type2:
    type: [Seed41,Type1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1
      }
  Type3:
    type: object|object
    example: {}
  Type4:
    type: [Type2]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1
      }
  Type5:
    type: Seed41|Type4
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1
      }
  Type6:
    type: [Type1]
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type7:
    type: [Seed3,Type1]
    example: |
      {
        "str3": "str",
        "num3": 1,
        "str2": "str",
        "num2": 1
      }
  Type8:
    type: [Seed1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type8_bool_1": true,
        "type8_prop_1": {}
      }
    properties:
      type8_prop_1:
        type: object
      type8_bool_1:
        type: boolean
  Type9:
    type: [Type2]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1
      }
  Type10:
    type: [Type9]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "str2": "str",
        "num2": 1
      }

/res1:
  post:
    body:
      application/json:
        type: Type10|object
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1
          }
/res2:
  post:
    body:
      application/json:
        type: object|Type6
        example: {}
/res3:
  post:
    body:
      application/json:
        type: Seed2|Type6
        example: |
          {
            "str2": "str",
            "num2": 1
          }
/res4:
  post:
    body:
      application/json:
        type: object
        example: {}
/res5:
  post:
    body:
      application/json:
        type: [Type10,Type6]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "str4": "str",
            "num4": 1,
            "str2": "str",
            "num2": 1
          }
