src/parser/test/parser-tests-gen/data/bad/bad-7.raml
#%RAML 1.0
title: Seed
version: v1
types:
  Seed1:
    properties:
      str1: string
      num1: number
  Seed2:
    properties:
      str2: string
      num2: number
  Seed3:
    properties:
      str3: string
      num3: number
  Seed41:
    type: Seed1
    properties:
      str4: string
      num4: number
  Type1:
    type: Seed1
    example: |
      {
        "str1": "str",
        "num1": 1,
        "type1_prop_1": "str",
        "type1_num_1": 1
      }
    properties:
      type1_num_1:
        type: number
      type1_prop_1:
        type: Seed3
  Type2:
    type: Seed3
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_prop_1": {},
        "type2_num_1": 1
      }
    properties:
      type2_num_1:
        type: number
      type2_prop_1:
        type: object
  Type3:
    type: object|Type1
    example: {}
  Type4:
    type: object|Type2
    example: {}
  Type5:
    type: Type2|object
    example: |
      {
        "str3": "str",
        "num3": 1,
        "type2_prop_1": {},
        "type2_num_1": 1
      }
  Type6:
    type: [Type4,Seed2]
    example: |
      {
        "str2": "str",
        "num2": 1
      }
  Type7:
    type: Type3|object
    example: {}
  Type8:
    type: [Seed41,Type1]
    example: |
      {
        "str1": "str",
        "num1": 1,
        "str4": "str",
        "num4": 1,
        "type1_prop_1": "str",
        "type1_num_1": 1,
        "type8_bool_1": true,
        "type8_num_1": 1
      }
    properties:
      type8_num_1:
        type: number
      type8_bool_1:
        type: boolean
  Type9:
    type: [Seed3,Type7]
    example: |
      {
        "str3": "str",
        "num3": 1
      }
  Type10:
    type: Seed1|Type1
    example: |
      {
        "str1": "str",
        "num1": 1
      }

/res1:
  post:
    body:
      application/json:
        type: Type4|Type7
        example: {}
/res2:
  post:
    body:
      application/json:
        type: [Type1,Seed41]
        example: |
          {
            "str1": "str",
            "num1": 1,
            "type1_num_1": 1,
            "type1_prop_1": {
              "str3": "str",
              "num3": 1
            },
            "str4": "str",
            "num4": 1
          }
/res3:
  post:
    body:
      application/json:
        type: [Type10]
        example: |
          {
            "str1": "str",
            "num1": 1
          }
/res4:
  post:
    body:
      application/json:
        type: [Seed2,Type7]
        example: |
          {
            "str2": "str",
            "num2": 1
          }
/res5:
  post:
    body:
      application/json:
        type: [Type5,Type6]
        example: |
          {
            "str3": "str",
            "num3": 1,
            "type2_num_1": 1,
            "type2_prop_1": {}
          }
